manifests-failed/icinga2-report-1.0.0.tgz-manifest.yaml
---
# Source: icinga2-report/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: icinga2-report
  labels:
    app.kubernetes.io/name: icinga2-report
    helm.sh/chart: icinga2-report-1.0.0
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: icinga2-report
      port: 8888
      targetPort: icinga2-report
      nodePort: null
  selector:
    app.kubernetes.io/name: icinga2-report
    app.kubernetes.io/instance: my-release
---
# Source: icinga2-report/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-icinga2-report
  labels:
    app.kubernetes.io/name: icinga2-report
    helm.sh/chart: icinga2-report-1.0.0
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: icinga2-report
  annotations:
    helm.sh/hook-weight: "0"
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: icinga2-report
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: icinga2-report
  template:
    metadata:
      labels:
        app.kubernetes.io/name: icinga2-report
        helm.sh/chart: icinga2-report-1.0.0
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: icinga2-report
    spec:
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: icinga2-report
                    app.kubernetes.io/instance: my-release
                namespaces:
                  - "icinga2-report-1.0.0.tgz"
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          

      containers:
        - name: icinga2-report
          image: docker.io/trungkien210493/icinga2-report:v1.7.1
          imagePullPolicy: "IfNotPresent"

          ports:
            - name: icinga2-report
              containerPort: 8888
          volumeMounts:
            - name: datasources
              mountPath: /etc/icinga2-report/datasources.yml
              subPath: datasources.yml
            - name: auth
              mountPath: /etc/icinga2-report/auth
              subPath: auth
            - name: icinga2-report-conf
              mountPath: /etc/icinga2-report/icinga2-report.conf
              subPath: icinga2-report.conf
            - name: configuration
              mountPath: /etc/icinga2-report/configuration
            - name: report-template
              mountPath: /etc/icinga2-report/configuration/report_template

      volumes:
        - name: datasources
          configMap:
            name: my-release-icinga2-report-datasources
        - name: auth
          configMap:
            name: my-release-icinga2-report-auth
        - name: icinga2-report-conf
          configMap:
            name: my-release-icinga2-report-icinga2-report-conf
        - name: configuration
          configMap:
            name: my-release-icinga2-report-configuration
        - name: report-template
          configMap:
            name: my-release-icinga2-report-report-template
---
# Source: icinga2-report/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: icinga2-report-ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: icinga2-report-1.0.0.tgz
  rules:
  - http:
      paths:
      - path: /grafana/send_request/(.*)
        pathType: Prefix
        backend:
          service:
            name: icinga2-report
            port:
              number: 8888
